--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "description": "A basic monolith project for generating and visualizing mock OpenTelemetry data.",
   "dependencies": {
     "infrastack-interview-fs-meu-20240829": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.1",
+    "typescript": "^5.5.4"
   }
 }
