--- a/opentelemetry/otel-collector-config.yaml
+++ b/opentelemetry/otel-collector-config.yaml
@@ -4,15 +4,34 @@ receivers:
       grpc:
         endpoint: "0.0.0.0:4317"
 
+processors:
+  batch:
+    timeout: 5s
+    send_batch_size: 100000
+
 exporters:
   clickhouse:
     endpoint: "${CLICKHOUSE_ENDPOINT}"
     database: "${CLICKHOUSE_DATABASE}"
     username: "${CLICKHOUSE_USERNAME}"
     password: "${CLICKHOUSE_PASSWORD}"
+    async_insert: true
+    ttl: 72h
+    compress: lz4
+    create_schema: true
+    logs_table_name: otel_logs
+    traces_table_name: otel_traces
+    metrics_table_name: otel_metrics
+    timeout: 5s
+    retry_on_failure:
+      enabled: true
+      initial_interval: 5s
+      max_interval: 30s
+      max_elapsed_time: 300s
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
+      processors: [batch]
       exporters: [clickhouse]
