--- a/opentelemetry/otel-collector-config.yaml
+++ b/opentelemetry/otel-collector-config.yaml
@@ -7,7 +7,7 @@ receivers:
 processors:
   batch:
     timeout: 5s
-    send_batch_size: 100000
+    send_batch_size: 1000
 
 exporters:
   clickhouse:
@@ -15,23 +15,30 @@ exporters:
     database: "${CLICKHOUSE_DATABASE}"
     username: "${CLICKHOUSE_USERNAME}"
     password: "${CLICKHOUSE_PASSWORD}"
-    async_insert: true
-    ttl: 72h
-    compress: lz4
-    create_schema: true
-    logs_table_name: otel_logs
-    traces_table_name: otel_traces
-    metrics_table_name: otel_metrics
-    timeout: 5s
+    timeout: 10s
     retry_on_failure:
       enabled: true
       initial_interval: 5s
       max_interval: 30s
       max_elapsed_time: 300s
+    sending_queue:
+      enabled: true
+      num_consumers: 10
+      queue_size: 5000
+    tls:
+      insecure_skip_verify: false
 
 service:
   pipelines:
     traces:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [clickhouse]
+    metrics:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [clickhouse]
+    logs:
       receivers: [otlp]
       processors: [batch]
       exporters: [clickhouse]
