fix: Update OpenTelemetry collector configuration for ClickHouse cloud compatibility

--- a/opentelemetry/otel-collector-config.yaml
+++ b/opentelemetry/otel-collector-config.yaml
@@ -25,8 +25,9 @@ exporters:
       enabled: true
       num_consumers: 10
       queue_size: 5000
-    tls:
-      insecure_skip_verify: false
+    logs_table_name: otel_logs
+    traces_table_name: otel_traces
+    metrics_table_name: otel_metrics
 
 service:
   pipelines:
