--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "validate": "ts-node scripts/validate.ts"
+    "validate": "ts-node scripts/validate.ts",
+    "start:user": "cd microservices/user-service && npm start",
+    "start:product": "cd microservices/product-service && npm start",
+    "start:order": "cd microservices/order-service && npm start",
+    "start:all": "concurrently \"npm run start:user\" \"npm run start:product\" \"npm run start:order\"",
+    "install:all": "npm install && cd microservices/user-service && npm install && cd ../product-service && npm install && cd ../order-service && npm install"
   },
   "keywords": [
     "infrastack",
@@ -19,11 +24,15 @@
   "description": "A basic monolith project for generating and visualizing mock OpenTelemetry data.",
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
-    "infrastack-interview-fs-meu-20240829": "^1.2.3"
+    "infrastack-interview-fs-meu-20240829": "^1.2.3",
+    "express": "^4.17.1",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.1",
+    "@types/express": "^4.17.13",
     "ts-node": "^10.9.1",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "concurrently": "^6.2.0"
   }
 }
