feat: Implement .env file usage across microservices
- Added dotenv package for reading .env files
- Updated package.json scripts to use dotenv
- Modified microservices to use environment variables
- Updated .env and .env.example files with all necessary variables

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "validate": "ts-node scripts/validate.ts",
-    "start:user": "OTEL_LOGS_EXPORTER=otlp cd microservices/user-service && npm start",
-    "start:product": "OTEL_LOGS_EXPORTER=otlp cd microservices/product-service && npm start",
-    "start:order": "OTEL_LOGS_EXPORTER=otlp cd microservices/order-service && npm start",
+    "start:user": "cd microservices/user-service && node -r dotenv/config ../../node_modules/.bin/ts-node src/index.ts",
+    "start:product": "cd microservices/product-service && node -r dotenv/config ../../node_modules/.bin/ts-node src/index.ts",
+    "start:order": "cd microservices/order-service && node -r dotenv/config ../../node_modules/.bin/ts-node src/index.ts",
     "start:all": "concurrently \"npm run start:user\" \"npm run start:product\" \"npm run start:order\"",
     "install:all": "npm install && cd microservices/user-service && npm install && cd ../product-service && npm install && cd ../order-service && npm install"
   },
@@ -24,15 +24,16 @@
   "description": "A basic monolith project for generating and visualizing mock OpenTelemetry data.",
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
-    "infrastack-interview-fs-meu-20240829": "^1.2.3",
+    "axios": "^0.21.1",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "axios": "^0.21.1"
+    "infrastack-interview-fs-meu-20240829": "^1.2.3"
   },
   "devDependencies": {
-    "@types/node": "^22.5.1",
     "@types/express": "^4.17.13",
+    "@types/node": "^22.5.1",
+    "concurrently": "^6.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.5.4",
-    "concurrently": "^6.2.0"
+    "typescript": "^5.5.4"
   }
 }
