--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,9 @@ CLICKHOUSE_PASSWORD=your_password
 OTEL_LOGS_EXPORTER=otlp
 OTEL_EXPORTER_OTLP_COMPRESSION=gzip
 
+# Service Ports
+USER_SERVICE_PORT=3001
+PRODUCT_SERVICE_PORT=3002
+ORDER_SERVICE_PORT=3003
+
 # Other Configuration
