--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "reactflow": "^11.11.4",
+    "recharts": "^2.12.7",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
