feat(microservices): implement inter-service communication and OpenTelemetry instrumentation
- Add OpenTelemetry instrumentation to all microservices
- Implement inter-service communication for order creation flow
- Add simulated user activity in user service
- Ensure proper context propagation between services
- Generate trace, metric, and log data autonomously

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,12 @@ CLICKHOUSE_USERNAME=your_username
 CLICKHOUSE_PASSWORD=your_password
 
 # OpenTelemetry Configuration
-OTEL_LOGS_EXPORTER=otlp
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 OTEL_EXPORTER_OTLP_COMPRESSION=gzip
+OTEL_LOGS_EXPORTER=otlp
+OTEL_SERVICE_NAME_USER=user-service
+OTEL_SERVICE_NAME_PRODUCT=product-service
+OTEL_SERVICE_NAME_ORDER=order-service
 
 # Service Ports
 USER_SERVICE_PORT=3001
